--- a/.github/workflows/conformace.yml
+++ b/.github/workflows/conformace.yml
@@ -17,4 +17,4 @@ jobs:
       - name: Conform
         uses: talos-systems/conform@v0.1.0-alpha.20
         with:
-          ref: ${{ github.event.pull_request.head.sha }}
+          args: enforce
