--- a/.github/workflows/conformace.yml
+++ b/.github/workflows/conformace.yml
@@ -13,8 +13,7 @@ jobs:
         with:
           fetch-depth: 0
           ref: ${{ github.event.pull_request.head.sha }}
-      - run: |
-          git fetch origin +refs/heads/main:refs/heads/main --unshallow
+      - run: git fetch --unshallow
 
       - name: Conform
         uses: talos-systems/conform@v0.1.0-alpha.20
