--- a/.github/workflows/conformace.yml
+++ b/.github/workflows/conformace.yml
@@ -16,3 +16,5 @@ jobs:
 
       - name: Conform
         uses: talos-systems/conform@v0.1.0-alpha.20
+        with:
+          args: enforce --commit-ref main
